window sizes in pixels, and mobile overflow fix

--- a/src/css/windowSizes.css
+++ b/src/css/windowSizes.css
@@ -1,89 +1,102 @@
 #social_media_window{
-    height:75%;
-    width:55%;
+    height:500px;
+    width:800px;
 }
 
 #i_wont_forget_hue_window{
-    height:35%;
-    width:60%;
+    height:350px;
+    width:250px;
 }
 
 #oh_bees_window{
-    height:30%;
-    width:35%;
+    height:200px;
+    width:500px;
 }
 
 #past_work_window{
-    height:75%;
-    width:55%;
+    height:500px;
+    width:800px;
 }
 
 #cv_window{
-   height: 90%;
-   width:60%;
+   height: 600px;
+   width: 900px;
 }
 
 #my_properties_window{
-    height:75%;
-    width:35%;
+    height:500px;
+    width:500px;
 }
 
 
 @media only screen and ((max-width: 600px) or (max-height:600px))    {
 
     @media only screen and (orientation:landscape){
-        #social_media_window{
-            height:75%;
-            width:60%;
-        }
 
+        #social_media_window{
+            height:350px;
+            width:575px;
+        }
+        
         #i_wont_forget_hue_window{
-            height:35%;
-            width:60%;
-        }      
+            height:220px;
+            width:350px;
+        }
         
         #oh_bees_window{
-            height:35%;
-            width:60%;
+            height:100px;
+            width:250px;
         }
-
+        
         #past_work_window{
-            height:80%;
-            width:70%;
+            height:300px;
+            width:575px;
+        }
+        
+        #cv_window{
+           height: 300px;
+           width: 450px;
+        }
+        
+        #my_properties_window{
+            height:300px;
+            width:530px;
         }
 
-        #cv_window{
-            height: 80%;
-            width:90%;
-         }
     }
 
     @media only screen and (orientation:portrait){
+
         #social_media_window{
-            height:75%;
-            width:90%;
+            height:500px;
+            width:800px;
         }
-
+        
         #i_wont_forget_hue_window{
-            height:20%;
-            width:90%;
+            height:150px;
+            width:250px;
         }
-
+        
         #oh_bees_window{
-            height:20%;
-            width:90%;
+            height:150px;
+            width:300px;
         }
-
+        
         #past_work_window{
-            height:75%;
-            width:90%;
+            height:500px;
+            width:800px;
+        }
+        
+        #cv_window{
+           height: 600px;
+           width: 900px;
+        }
+        
+        #my_properties_window{
+            height:500px;
+            width:500px;
         }
 
-        #cv_window{
-            height: 90%;
-            width:90%;
-         }
     }
-
 
 }
